{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "88d79cc7-ca8d-4c27-b720-c0384aab0f80",
            "actions": [
                {
                    "name": "LineCreating",
                    "type": "Value",
                    "id": "cc24eaef-761a-4cee-987d-d4013190b146",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LineDelete",
                    "type": "Value",
                    "id": "a560cae0-9ecf-456d-8451-300ff448c3b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ColorChange",
                    "type": "PassThrough",
                    "id": "19709191-a102-4ae6-b46d-591d2d8c5f52",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LineCreate",
                    "type": "Button",
                    "id": "760505ee-7c27-4d66-87ea-ebdd8fa4b62c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Create",
                    "id": "8bdec43c-a770-4451-9701-6244cc5eb091",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineCreating",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "cb9a6ca2-ca7c-4373-a431-8f9070e04f5a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineCreating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "d1827cab-114b-49c9-bcaf-59f27f4f2edd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineCreating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Delete",
                    "id": "cafaf95d-6389-4a92-8ea3-73dd69727d72",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineDelete",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "3a7e9bd9-75ef-49c5-8901-b8804edea8d0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineDelete",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "06393e08-b1aa-400e-9ab1-f764e0221643",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineDelete",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "44c0a50d-f29a-4496-8d5a-d81136b13b4b",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ColorChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b157ca6-6d4d-40ca-a022-e8e83e3ed750",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LineCreate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}